--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t jcsolutions/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run jcsolutions/docker-react npm run test -- --coverage
+  - docker run -e CI=true jcsolutions/docker-react npm run test -- --coverage
